[gd_scene load_steps=15 format=2]

[ext_resource path="res://textures/players/Steve.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://textures/Blocks/bricks.png" type="Texture" id=3]
[ext_resource path="res://textures/items/diamond_pickaxe.png" type="Texture" id=4]
[ext_resource path="res://textures/cursor.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 13 )

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftLeg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 0.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0, 45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/RightArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 0.0, -45.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RightLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RightLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0, 45.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "break"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -110.0, -45.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "breakLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 110.0, 45.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("LeftLeg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/RightArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RightLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RightLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("body/LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/RightArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 13 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE,UV) + vec4(1.0,0.5,0.0,1.0) *vec4(1.0,1.0,1.0,0.5);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 10
script = ExtResource( 2 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 4, 8, 4, 12 )

[node name="RightArm" type="Sprite" parent="body"]
position = Vector2( 0, -4 )
z_index = 2
texture = ExtResource( 1 )
centered = false
offset = Vector2( -2, -2 )
region_enabled = true
region_rect = Rect2( 12, 8, 4, 12 )

[node name="holding" type="Sprite" parent="body/RightArm"]
position = Vector2( 6, 8 )
rotation = 2.32129
z_index = -1
texture = ExtResource( 4 )
flip_h = true

[node name="LeftArm" type="Sprite" parent="body"]
position = Vector2( 0, -4 )
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( -2, -2 )
region_enabled = true
region_rect = Rect2( 16, 8, 4, 12 )

[node name="holding" type="Sprite" parent="body/LeftArm"]
position = Vector2( -4, 8 )
rotation = 3.90256
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 3 )

[node name="head" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -4, -8 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="RightLeg" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 8, 4, 12 )

[node name="LeftLeg" type="Sprite" parent="."]
position = Vector2( 0, 6 )
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 8, 8, 4, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Walk = SubResource( 2 )
anims/break = SubResource( 3 )
anims/breakLeft = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="breakAni" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/break = SubResource( 3 )
anims/breakLeft = SubResource( 4 )
anims/idle = SubResource( 6 )

[node name="hunger" type="Timer" parent="."]
autostart = true

[node name="BlockTest" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockTest"]
position = Vector2( 0, 5 )
shape = SubResource( 7 )

[node name="cursor" type="Sprite" parent="."]
visible = false
material = SubResource( 9 )
position = Vector2( -0.530572, 0.29238 )
scale = Vector2( 27.6925, 15.6426 )
texture = ExtResource( 5 )

[node name="hungerEffect" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Sprint" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="hunger" to="." method="_on_hunger_timeout"]
[connection signal="area_entered" from="BlockTest" to="." method="_on_BlockTest_area_entered"]
[connection signal="area_exited" from="BlockTest" to="." method="_on_BlockTest_area_exited"]
[connection signal="timeout" from="hungerEffect" to="." method="_on_Hunger_timeout"]
[connection signal="timeout" from="Sprint" to="." method="_on_Sprint_timeout"]
